fix common problems page from overhang on smaller device screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,9 @@
 body {
     font-family: BenchNine, sans-serif;
     background-color: #EFE6DD;
-    max-width: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
 }
 
 /* ---------------------- header ---------------------- */
@@ -404,7 +406,7 @@ td {
 }
 
 .fridge-video {
-    width: 100%;
+    width: 99%;
 }
 
 .fridge-title {
@@ -497,10 +499,6 @@ td {
 
 @media screen and (max-width: 1024px) {
 
-    body {
-        max-width: 100%;
-    }
-
     #site-logo {
         text-align: center;
         font-size: 190%;
@@ -535,10 +533,6 @@ td {
 /* responsive design - tablet */
 
 @media screen and (max-width: 800px) {
-
-    body {
-        width: 100%;
-    }
 
     #site-logo {
         text-align: center;
